[FIX] Keep up with the z-index war to beat OpenLayers at 1004
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/trunk@36031 b456876b-0849-0410-b77d-98878d47e9d5

--- a/css/cssmenus.css
+++ b/css/cssmenus.css
@@ -22,7 +22,7 @@
 	position: absolute;
 	top: -999em;
 	width: 10em; /* left offset of submenus need to match (see below) */
-	z-index: 751;
+	z-index: 1751;
 }
 
 .cssmenu_horiz ul li,
@@ -53,7 +53,7 @@
 .cssmenu_vert li.sfHover ul {
 	left: 0;
 	top: 2.5em; /* match top ul list item height */
-	z-index: 752;
+	z-index: 1752;
 }
 
 .cssmenu_horiz li:hover li ul,
